--- a/src/core/templates/core/contacts.html
+++ b/src/core/templates/core/contacts.html
@@ -60,12 +60,12 @@
                         <span class="stat-label-revolutionary">{% trans "техподдержка" %}</span>
                     </div>
                     <div class="stat-card-revolutionary">
-                        <span class="stat-number-revolutionary">5+</span>
-                        <span class="stat-label-revolutionary">{% trans "лет опыта" %}</span>
+                        <span class="stat-number-revolutionary">100%</span>
+                        <span class="stat-label-revolutionary">{% trans "практика" %}</span>
                     </div>
                     <div class="stat-card-revolutionary">
-                        <span class="stat-number-revolutionary">98%</span>
-                        <span class="stat-label-revolutionary">{% trans "довольных студентов" %}</span>
+                        <span class="stat-number-revolutionary">1:1</span>
+                        <span class="stat-label-revolutionary">{% trans "индивидуальный подход" %}</span>
                     </div>
                 </div>
             </div>
